# GenBART

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: docs.yml
GenBART/: tree.py
GenBART/tests/: test_tree.py
docs/: Doxyfile  conf.py  getting_started.rst  index.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/api/cpp/: backfitting_engine.rst  bindings.rst  index.rst  overview.rst  packed_forest.rst  tree.rst
docs/api/python/: index.rst  (+6 more)
docs/developer/: architecture.rst  index.rst
docs/user_guide/: index.rst  parameters.rst
genbart/: __init__.py  _backend.pyi  bart.py  baseBART.py  model_selection.py  probit_bart.py  profilestats.py  reg_bart.py  tree.py  variable_selection.py
genbart/feature_selection/: __init__.py  permutation_null.py  predictive_degradation.py  results.py  thresholds.py  utils.py
notebooks/: bart_style.mplstyle  basic_probit_example.ipynb  basic_regression_example.ipynb  regression_data_example.ipynb  variable_inclusion_example.ipynb
notebooks/.ipynb_checkpoints/: basic_regression_example-checkpoint.ipynb
src/cpp/: backend_bindings.cpp  backfitting_engine.cpp  backfitting_engine.hpp  packed_forest.cpp  packed_forest.hpp  tree.cpp  tree.hpp
tests/: test_backfitting_engine.py  test_backfitting_engine_full.py  test_backfitting_engine_simple.py  test_bart.py  test_cpp_tree.py  test_feature_selection.py  test_model_selection.py  test_packed_forest.py  test_probit_bart.py  test_reg_bart.py  test_regbart.py  test_tree.py  test_variable_selection.py
(+4 files in other folders)
